// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultAssessment contract every closed vault classification has an exact JSON fixture 1`] = `
"{
  "new-path": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "new-path"
    },
    "revision": {
      "head": null,
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "absent",
      "branch": null
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [
      {
        "kind": "create-vault-directory",
        "id": "vault-directory",
        "path": "/Users/example/Vault",
        "mode": "0755",
        "ifMissing": true
      },
      {
        "kind": "initialize-git",
        "id": "git-repository",
        "repositoryPath": "/Users/example/Vault",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-directory",
        "path": ".dome",
        "mode": "0755",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-state-directory",
        "path": ".dome/state",
        "mode": "0700",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "agents-orientation",
        "path": "AGENTS.md",
        "bytes": 512,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "gitignore",
        "path": ".gitignore",
        "bytes": 64,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "set-content-scope",
        "id": "vault-config",
        "scope": {
          "version": 1,
          "include": [
            "**/*.md"
          ],
          "exclude": [
            ".dome/**"
          ]
        },
        "write": {
          "path": ".dome/config.yaml",
          "operation": "create-file",
          "bytes": 128,
          "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
          "mode": "0644",
          "ifMissing": true
        }
      },
      {
        "kind": "install-home",
        "id": "home-artifact",
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "disposition": "install-or-resume"
      },
      {
        "kind": "select-home-vault",
        "id": "home-vault-selector",
        "vaultPath": "/Users/example/Vault"
      },
      {
        "kind": "install-home-service",
        "id": "home-service",
        "serviceLabel": "com.dome.home.example-vault",
        "ifMissing": true
      },
      {
        "kind": "start-home",
        "id": "home-start",
        "serviceLabel": "com.dome.home.example-vault"
      }
    ],
    "blockers": []
  },
  "empty-directory": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "empty-directory"
    },
    "revision": {
      "head": null,
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "absent",
      "branch": null
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [
      {
        "kind": "initialize-git",
        "id": "git-repository",
        "repositoryPath": "/Users/example/Vault",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-directory",
        "path": ".dome",
        "mode": "0755",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-state-directory",
        "path": ".dome/state",
        "mode": "0700",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "agents-orientation",
        "path": "AGENTS.md",
        "bytes": 512,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "gitignore",
        "path": ".gitignore",
        "bytes": 64,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "set-content-scope",
        "id": "vault-config",
        "scope": {
          "version": 1,
          "include": [
            "**/*.md"
          ],
          "exclude": [
            ".dome/**"
          ]
        },
        "write": {
          "path": ".dome/config.yaml",
          "operation": "create-file",
          "bytes": 128,
          "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
          "mode": "0644",
          "ifMissing": true
        }
      },
      {
        "kind": "install-home",
        "id": "home-artifact",
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "disposition": "install-or-resume"
      },
      {
        "kind": "select-home-vault",
        "id": "home-vault-selector",
        "vaultPath": "/Users/example/Vault"
      },
      {
        "kind": "install-home-service",
        "id": "home-service",
        "serviceLabel": "com.dome.home.example-vault",
        "ifMissing": true
      },
      {
        "kind": "start-home",
        "id": "home-start",
        "serviceLabel": "com.dome.home.example-vault"
      }
    ],
    "blockers": []
  },
  "existing-non-git-vault": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "existing-non-git-vault"
    },
    "revision": {
      "head": null,
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "absent",
      "branch": null
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [],
      "untracked": [
        "Journal.md"
      ],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [
      {
        "kind": "initialize-git",
        "id": "git-repository",
        "repositoryPath": "/Users/example/Vault",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-directory",
        "path": ".dome",
        "mode": "0755",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-state-directory",
        "path": ".dome/state",
        "mode": "0700",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "agents-orientation",
        "path": "AGENTS.md",
        "bytes": 512,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "gitignore",
        "path": ".gitignore",
        "bytes": 64,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "set-content-scope",
        "id": "vault-config",
        "scope": {
          "version": 1,
          "include": [
            "**/*.md"
          ],
          "exclude": [
            ".dome/**"
          ]
        },
        "write": {
          "path": ".dome/config.yaml",
          "operation": "create-file",
          "bytes": 128,
          "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
          "mode": "0644",
          "ifMissing": true
        }
      },
      {
        "kind": "create-baseline-commit",
        "id": "baseline-commit",
        "message": "Initialize Dome vault",
        "paths": [
          "Journal.md"
        ]
      },
      {
        "kind": "install-home",
        "id": "home-artifact",
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "disposition": "install-or-resume"
      },
      {
        "kind": "select-home-vault",
        "id": "home-vault-selector",
        "vaultPath": "/Users/example/Vault"
      },
      {
        "kind": "install-home-service",
        "id": "home-service",
        "serviceLabel": "com.dome.home.example-vault",
        "ifMissing": true
      },
      {
        "kind": "start-home",
        "id": "home-start",
        "serviceLabel": "com.dome.home.example-vault"
      }
    ],
    "blockers": []
  },
  "existing-git-vault": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "existing-git-vault"
    },
    "revision": {
      "head": "1111111111111111111111111111111111111111",
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "clean",
      "branch": "main"
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-directory",
        "path": ".dome",
        "mode": "0755",
        "ifMissing": true
      },
      {
        "kind": "ensure-scaffold-directory",
        "id": "dome-state-directory",
        "path": ".dome/state",
        "mode": "0700",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "agents-orientation",
        "path": "AGENTS.md",
        "bytes": 512,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "write-scaffold-file",
        "id": "gitignore",
        "path": ".gitignore",
        "bytes": 64,
        "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
        "mode": "0644",
        "ifMissing": true
      },
      {
        "kind": "set-content-scope",
        "id": "vault-config",
        "scope": {
          "version": 1,
          "include": [
            "**/*.md"
          ],
          "exclude": [
            ".dome/**"
          ]
        },
        "write": {
          "path": ".dome/config.yaml",
          "operation": "create-file",
          "bytes": 128,
          "sha256": "4444444444444444444444444444444444444444444444444444444444444444",
          "mode": "0644",
          "ifMissing": true
        }
      },
      {
        "kind": "install-home",
        "id": "home-artifact",
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "disposition": "install-or-resume"
      },
      {
        "kind": "select-home-vault",
        "id": "home-vault-selector",
        "vaultPath": "/Users/example/Vault"
      },
      {
        "kind": "install-home-service",
        "id": "home-service",
        "serviceLabel": "com.dome.home.example-vault",
        "ifMissing": true
      },
      {
        "kind": "start-home",
        "id": "home-start",
        "serviceLabel": "com.dome.home.example-vault"
      }
    ],
    "blockers": []
  },
  "existing-dome-vault": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "existing-dome-vault"
    },
    "revision": {
      "head": "1111111111111111111111111111111111111111",
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "clean",
      "branch": "main"
    },
    "dome": {
      "state": "configured"
    },
    "installedHome": {
      "state": "owned",
      "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
      "productVersion": "0.4.0",
      "buildCommit": "1111111111111111111111111111111111111111",
      "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444",
      "selectedVaultPath": "/Users/example/Vault"
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [],
    "blockers": []
  },
  "incompatible-active-operation": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "incompatible-active-operation"
    },
    "revision": {
      "head": "1111111111111111111111111111111111111111",
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "operation-active",
      "branch": "main"
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [],
    "blockers": [
      {
        "code": "active-git-operation",
        "message": "A Git operation is active.",
        "nextAction": "Finish or abort the Git operation, then reassess."
      }
    ]
  },
  "unsafe-or-ambiguous-state": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "unsafe-or-ambiguous-state"
    },
    "revision": {
      "head": "1111111111111111111111111111111111111111",
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "clean",
      "branch": "main"
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [],
    "blockers": [
      {
        "code": "symlink-ambiguity",
        "message": "The selected path contains an ambiguous link.",
        "nextAction": "Choose a canonical vault path with no escaping links, then reassess."
      }
    ]
  }
}"
`;

exports[`VaultAssessment contract detached and unborn Git states have exact fail-closed fixtures 1`] = `
"{
  "detached": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "unsafe-or-ambiguous-state"
    },
    "revision": {
      "head": "1111111111111111111111111111111111111111",
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "detached",
      "branch": null
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [],
    "blockers": [
      {
        "code": "detached-head",
        "message": "The repository has a detached HEAD.",
        "nextAction": "Check out the intended branch, then reassess."
      }
    ]
  },
  "unborn": {
    "schema": "dome.setup.vault-assessment/v1",
    "target": {
      "path": "/Users/example/Vault",
      "kind": "unsafe-or-ambiguous-state"
    },
    "revision": {
      "head": null,
      "worktreeFingerprint": "2222222222222222222222222222222222222222222222222222222222222222"
    },
    "host": {
      "platform": "darwin",
      "architecture": "arm64",
      "supported": true
    },
    "product": {
      "packageName": "@marktoda/dome",
      "packageVersion": "0.4.0",
      "sourceCommit": "1111111111111111111111111111111111111111",
      "productManifestSha256": "3333333333333333333333333333333333333333333333333333333333333333",
      "packagedHome": {
        "artifactId": "3333333333333333333333333333333333333333333333333333333333333333",
        "productVersion": "0.4.0",
        "buildCommit": "1111111111111111111111111111111111111111",
        "manifestSha256": "4444444444444444444444444444444444444444444444444444444444444444"
      }
    },
    "prerequisites": [
      {
        "id": "bun",
        "status": "available",
        "version": "1.2.13"
      },
      {
        "id": "git",
        "status": "available",
        "version": "2.50.1"
      }
    ],
    "git": {
      "state": "unborn",
      "branch": "main"
    },
    "dome": {
      "state": "absent"
    },
    "installedHome": {
      "state": "absent",
      "artifactId": null,
      "productVersion": null,
      "buildCommit": null,
      "manifestSha256": null,
      "selectedVaultPath": null
    },
    "markdown": {
      "tracked": [
        "notes/hello.md"
      ],
      "untracked": [],
      "proposedScope": {
        "version": 1,
        "include": [
          "**/*.md"
        ],
        "exclude": [
          ".dome/**"
        ]
      }
    },
    "actions": [],
    "blockers": [
      {
        "code": "unborn-repository",
        "message": "The repository has no first commit.",
        "nextAction": "Create or remove the incomplete repository, then reassess."
      }
    ]
  }
}"
`;
